--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 	  android:versionCode="1"
 	  android:versionName="1.0.0" >
 
+  <uses-permission android:name="android.permission.WAKE_LOCK" />
+
   <application android:label="@string/app_name" >
     <activity
 	android:name=".HelloActivity"
