--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 	  android:versionName="1.0.0" >
 
   <uses-permission android:name="android.permission.WAKE_LOCK" />
+  <uses-permission android:name="android.permission.VIBRATE"/>
 
   <application android:label="@string/app_name" >
     <activity
@@ -15,5 +16,10 @@
 	<category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
+    <activity
+	android:name=".AlarmActivity"
+	android:label="@string/app_name"
+	android:showOnLockScreen="true"
+	android:theme="@android:style/Theme.Dialog" />
   </application>
 </manifest>
